--- a/app/views/applications/edit.html.erb
+++ b/app/views/applications/edit.html.erb
@@ -4,7 +4,6 @@
 
 <br>
 
-<div>
-  <%#= link_to "Show this application", @application %> |
-  <%= link_to "Back to your applications", applications_path %>
+<div>  
+  <%= link_to "Back to your applications", applications_path, class:"btn btn-outline-secondary my-3" %>
 </div>
